# house-price-pi

./: .gitignore  01_eda.ipynb  02_feature_engineering.ipynb  Makefile  README.md  bash.exe.stackdump  config.yaml  converttoexecl.py  data_generator.py  export_predictions.py  extract_cities.py  main.py  metrics.py  model.py  modele_immobilier.py  pyproject.toml  requirements.txt  upload_preview.py  visualisation_simple.py  washington_real_estate.csv  washington_real_estate.xlsx
.github/workflows/: cd.yml  ci.yml
exports/: README_20260211_214601.txt  README_20260213_030910.txt  meilleures_predictions_20260213_030910.csv  pires_predictions_20260213_030910.csv  statistiques_globales_20260211_214601.csv  statistiques_globales_20260213_030910.csv  statistiques_par_ville_20260213_030910.csv
exports/par_ville/: algona_predictions_20260213_030910.csv  burien_predictions_20260211_214601.csv  carnation_predictions_20260213_030910.csv  clyde hill_predictions_20260213_030910.csv  covington_predictions_20260211_214601.csv  des moines_predictions_20260211_214601.csv  duvall_predictions_20260211_214601.csv  enumclaw_predictions_20260211_214601.csv  federal way_predictions_20260211_214601.csv  hunts point_predictions_20260213_030910.csv  issaquah_predictions_20260211_214601.csv  kenmore_predictions_20260211_214601.csv  kent_predictions_20260211_214601.csv  king county_predictions_20260211_214601.csv  kirkland_predictions_20260211_214601.csv  lake forest park_predictions_20260213_030910.csv  maple valley_predictions_20260211_214601.csv  medina_predictions_20260211_214601.csv  milton_predictions_20260211_214601.csv  newcastle_predictions_20260211_214601.csv  north bend_predictions_20260211_214601.csv  pacific_predictions_20260211_214601.csv  redmond_predictions_20260211_214601.csv  sammamish_predictions_20260213_030910.csv  sea-tac_predictions_20260213_030910.csv  seattle_predictions_20260213_030910.csv  shoreline_predictions_20260213_030910.csv  skykomish_predictions_20260211_214601.csv  snoqualmie_predictions_20260211_214601.csv  tukwila_predictions_20260213_030910.csv  woodinville_predictions_20260213_030910.csv
exports_test/: README_20260213_030325.txt  echantillon_100_20260213_030326.csv  predictions_completes_20260213_030325.csv  predictions_light_20260213_030325.csv  statistiques_globales_20260213_030325.csv
exports_test/par_ville/: auburn_predictions_20260213_030325.csv  beaux arts_predictions_20260213_030325.csv  bellevue_predictions_20260213_030325.csv  black diamond_predictions_20260213_030325.csv  bothell_predictions_20260213_030325.csv  mercer island_predictions_20260213_030325.csv  normandy park_predictions_20260213_030325.csv  renton_predictions_20260213_030325.csv  seatac_predictions_20260213_030325.csv  yarrow point_predictions_20260213_030325.csv
metrics_reports/: comparison_20260211_194350.csv  coverage_LightGBM_20260211_194350.csv  metrics_LightGBM_20260211_194350.csv  metrics_RandomForest_20260211_194350.csv  metrics_XGBoost_20260211_194350.csv  quick_metrics_XGBoost_20260211_194350.csv
models/: all_predictions_20260211_214259.csv  all_predictions_20260211_214259.xlsx  lightgbm_q_50_20260211_184151.joblib  lightgbm_q_5_20260211_184151.joblib  lightgbm_q_95_20260211_184151.joblib  model_features.pkl  model_metrics.pkl  preprocessor_20260211_184151.joblib  preprocessor_20260211_200548.joblib  preprocessor_20260211_204525.joblib  preprocessor_20260211_210937.joblib  xgboost_20260211_184151.json
models_quantile/: lightgbm_q_50_20260212_111827.joblib  lightgbm_q_5_20260212_085517.joblib  lightgbm_q_95_20260212_150455.joblib  preprocessor_20260211_213452.joblib
predictions/: metrics_20260211_184152.csv
