[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "house-price-pi"
version = "2.0.0"
description = "Washington House Price Prediction with Quantile Regression & Prediction Intervals"
readme = "README.md"
authors = [
    {name = "Data Science Team", email = "team@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    # Core
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    
    # ML
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    
    # Dashboard
    "streamlit>=1.28.0",
    
    # Utils
    "pyyaml>=6.0",
    "joblib>=1.3.0",
    "tqdm>=4.65.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "colorlog>=6.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.0",
    "jupyter>=1.0.0",
    "ipython>=8.14.0",
    "ipykernel>=6.25.0"
]

ci = [
    "pytest",
    "pytest-cov",
    "coverage>=7.3.0",
    "codecov>=2.1.13"
]

dashboard = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "folium>=0.14.0",
    "streamlit-folium>=0.15.0"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/house-price-pi"
"Bug Tracker" = "https://github.com/yourusername/house-price-pi/issues"
"Documentation" = "https://house-price-pi.readthedocs.io"

[project.scripts]
house-pi-train = "src.models.train:main_cli"
house-pi-predict = "src.models.predict:main_cli"
house-pi-dashboard = "dashboard.app:main"
house-pi-generate-data = "scripts.generate_data:main"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | data
  | artifacts
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["artifacts", "data", "venv_washington"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
ignore_missing_imports = true
strict_equality = true
warn_unreachable = true
exclude = [
    'artifacts/',
    'data/',
    'venv_washington/'
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=xml --cov-report=html"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "smoke: marks tests as smoke tests"
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*", "*/venv_washington/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:"
]